--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,28 +6,30 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="100px">
 
-    <div *ngIf="dish">
-        <mat-card fxFlex="40">
-          <mat-card-header>
-            <mat-card-title>
-              <h3>{{dish.name | uppercase}}</h3>
-            </mat-card-title>
-          </mat-card-header>
-          <img mat-card-image src={{dish.image}} alt={{dish.name}}>
-          <mat-card-content>
-            <p>{{dish.description}}
-            </p>
-          </mat-card-content>
-          <mat-card-actions>
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
-          </mat-card-actions>
-        </mat-card>
-      
-      <mat-list fxFlex="40">
-        <h1>Comments</h1>
+    <div fxFlex="40">
+      <mat-card *ngIf="dish">
+        <mat-card-header>
+          <mat-card-title>
+            <h3>{{dish.name | uppercase}}</h3>
+          </mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+        <mat-card-content>
+          <p>{{dish.description}}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    
+    <div fxFlex="40">
+      <mat-list *ngIf="dish">
+        <h3>Comments</h3>
         <mat-list-item *ngFor="let comment of dish.comments">
-          <h6 matLine> {{comment.comment}} </h6>
+          <h4 matLine> {{comment.comment}} </h4>
           <p matLine>
             <span> {{comment.rating}} Stars </span><br>
             <span> -- {{comment.author}} {{comment.date | date}}</span>
@@ -35,5 +37,5 @@
         </mat-list-item>
       </mat-list>
     </div>
-
+  
 </div>
