--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -43,7 +43,31 @@
             <span> -- {{comment.author}} {{comment.date | date}}</span>
           </p>
         </mat-list-item>
+        <div *ngIf="commentaryForm.valid">
+            <mat-list-item>
+              <h4 matLine> {{ cform.value.comment }} </h4>
+              <p matLine>
+                <span> {{ cform.value.rating }} Stars </span><br>
+                <span> -- {{ cform.value.author }}</span>
+              </p>
+            </mat-list-item>
+        </div>
       </mat-list>
+
+      <form novalidate [formGroup]="commentaryForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field class="full-width">
+            <input matInput formControlName="author" placeholder="Name" type="text" required>
+            <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+          </mat-form-field>
+          <mat-slider min="0" max="5" value="5" tickInterval="1" formControlName="rating"></mat-slider>
+          <mat-form-field class="full-width">
+            <textarea matInput formControlName="comment" placeholder="Your Commentary" rows=12 required></textarea>
+            <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+          </mat-form-field>
+        </p>
+        <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentaryForm.invalid">Submit</button>
+      </form>
     </div>
 
     <div fxFlex [hidden]="dish">
