--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,72 +6,77 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-    <div fxFlex="40" *ngIf="dish">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>
-            <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
-          </mat-card-title>
-        </mat-card-header>
-        <img mat-card-image src="{{ BaseURL + dish.image }}" alt={{dish.name}}>
-        <mat-card-content>
-          <p>{{dish.description}}
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button [routerLink]="['/dishdetail', prev]">
-            <span class="fa fa-chevron-left fa-lg"></span>
-          </button>
-          <button mat-button (click)="goBack()">BACK</button>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-          <span class="flex-spacer"></span>
-          <button mat-button [routerLink]="['/dishdetail', next]">
-            <span class="fa fa-chevron-right fa-lg"></span>
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    
-    <div fxFlex="40" *ngIf="dish">
-      <mat-list>
-        <h3>Comments</h3>
-        <mat-list-item *ngFor="let comment of dish.comments">
-          <h4 matLine> {{comment.comment}} </h4>
-          <p matLine>
-            <span> {{comment.rating}} Stars </span><br>
-            <span> -- {{comment.author}} {{comment.date | date}}</span>
-          </p>
-        </mat-list-item>
-        <div *ngIf="commentaryForm.valid">
-            <mat-list-item>
-              <h4 matLine> {{ cform.value.comment }} </h4>
-              <p matLine>
-                <span> {{ cform.value.rating }} Stars </span><br>
-                <span> -- {{ cform.value.author }}</span>
-              </p>
-            </mat-list-item>
-        </div>
-      </mat-list>
-
-      <form novalidate [formGroup]="commentaryForm" #cform="ngForm" (ngSubmit)="onSubmit()">
-        <p>
-          <mat-form-field class="full-width">
-            <input matInput formControlName="author" placeholder="Name" type="text" required>
-            <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
-          </mat-form-field>
-          <mat-slider min="0" max="5" value="5" tickInterval="1" formControlName="rating"></mat-slider>
-          <mat-form-field class="full-width">
-            <textarea matInput formControlName="comment" placeholder="Your Commentary" rows=12 required></textarea>
-            <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
-          </mat-form-field>
+  <div fxFlex="40" *ngIf="dish">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
+          <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
+        </mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="{{ BaseURL + dish.image }}" alt={{dish.name}}>
+      <mat-card-content>
+        <p>{{dish.description}}
         </p>
-        <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentaryForm.invalid">Submit</button>
-      </form>
-    </div>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [routerLink]="['/dishdetail', prev]">
+          <span class="fa fa-chevron-left fa-lg"></span>
+        </button>
+        <button mat-button (click)="goBack()">BACK</button>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+        <span class="flex-spacer"></span>
+        <button mat-button [routerLink]="['/dishdetail', next]">
+          <span class="fa fa-chevron-right fa-lg"></span>
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+  
+  <div fxFlex="40" *ngIf="dish">
+    <mat-list>
+      <h3>Comments</h3>
+      <mat-list-item *ngFor="let comment of dish.comments">
+        <h4 matLine> {{comment.comment}} </h4>
+        <p matLine>
+          <span> {{comment.rating}} Stars </span><br>
+          <span> -- {{comment.author}} {{comment.date | date}}</span>
+        </p>
+      </mat-list-item>
+      <div *ngIf="commentaryForm.valid">
+          <mat-list-item>
+            <h4 matLine> {{ cform.value.comment }} </h4>
+            <p matLine>
+              <span> {{ cform.value.rating }} Stars </span><br>
+              <span> -- {{ cform.value.author }}</span>
+            </p>
+          </mat-list-item>
+      </div>
+    </mat-list>
 
-    <div fxFlex [hidden]="dish">
-      <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
-    </div>
+    <form novalidate [formGroup]="commentaryForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+        </mat-form-field>
+        <mat-slider min="0" max="5" value="5" tickInterval="1" formControlName="rating"></mat-slider>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Commentary" rows=12 required></textarea>
+          <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentaryForm.invalid">Submit</button>
+    </form>
+  </div>
+
+  <div fxFlex [hidden]="dish || errMess">
+    <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
+  </div>
+
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
   
 </div>
