--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -38,9 +38,9 @@
 
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
+    <!--<p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>-->
 
-    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()" [hidden]="serverProcessing || showingSubmission">
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
@@ -83,4 +83,25 @@
       </button>
     </form>
   </div>
+
+  <div fxFlex *ngIf="serverProcessing && !errMess">
+    <h3>Submitting Form...</h3>
+    <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
+  </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
+
+  <div fxFlex *ngIf="showingSubmission">
+    <h3>Your Submission</h3>
+    <p>First Name: {{ feedback.firstname }}</p>
+    <p>Last Name: {{ feedback.lastname }}</p>
+    <p>Tel Number: {{ feedback.telnum }}</p>
+    <p>Email: {{ feedback.email }}</p>
+    <p>Contact You?: {{ feedback.agree }}</p>
+    <p>How?: {{ feedback.contacttype }}</p>
+    <p>Feedback: {{ feedback.message }}</p>
+  </div>
+
 </div>
