--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,18 +10,18 @@
   </div>
 
   <div fxFlex>
-    <h3>Location Information</h3> 
+    <h3>Informação do Local</h3> 
     <div fxLayout="column" fxLayout.gt-sm="row">
       <div fxFlex="50" fxFlexOffset="20px">
-        <h4>Our Address</h4>
+        <h4>Endereço</h4>
         <address>
-          121, Clear Water Bay Road<br>
-          Clear Water Bay, Kowloon<br>
-          HONG KONG<br>
-          <i class="fa fa-phone"></i>: +852 1234 5678<br>
-          <i class="fa fa-fax"></i>: +852 8765 4321<br>
+          21, Travessa Madre Jacinta<br>
+          Gávea, Rio de Janeiro<br>
+          Brasil<br>
+          <i class="fa fa-phone"></i>: +21 99999-9623<br>
+          <i class="fa fa-fax"></i>: +21 98790-1506<br>
           <i class="fa fa-envelope"></i>: 
-                <a href="mailto:confusion@food.net">confusion@food.net</a>
+                <a href="mailto:confusion@food.net">violante@brabo.com</a>
         </address>
         <p></p>
         <div>
@@ -37,23 +37,23 @@
   </div>
 
   <div fxFlex fxFlexOffset="20px" class="form-size">
-    <h3>Send us your Feedback</h3>
+    <h3>Conte o que você mais gosta sobre Violante</h3>
     <!--<p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>-->
 
     <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()" [hidden]="serverProcessing || showingSubmission">
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
+          <input matInput formControlName="firstname" placeholder="Primeiro Nome" type="text" required>
           <mat-error *ngIf="formErrors.firstname">{{formErrors.firstname}}</mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
+          <input matInput formControlName="lastname" placeholder="Último Nome" type="text" required>
           <mat-error *ngIf="formErrors.lastname">{{formErrors.lastname}}</mat-error>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel" pattern="[0-9]*" required>
+          <input matInput formControlName="telnum" placeholder="Telefone" type="tel" pattern="[0-9]*" required>
           <mat-error *ngIf="formErrors.telnum">{{formErrors.telnum}}</mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
@@ -75,10 +75,11 @@
         </table>
       <p>
         <mat-form-field class="full-width">
-          <textarea matInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
+          <textarea matInput formControlName="message" placeholder="Seu Comentário" rows=12 required></textarea>
+          <mat-error *ngIf="formErrors.message">{{formErrors.message}}</mat-error>
         </mat-form-field>
       </p>
-      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">
+      <button type="submit" mat-raised-button color="primary" [disabled]="feedbackForm.invalid">
         Submit
       </button>
     </form>
