--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,19 +10,19 @@
         <h4>Links</h4>
         <mat-list>
           <mat-list-item><a mat-button routerLink="/home">Home</a></mat-list-item>
-          <mat-list-item><a mat-button routerLink="/aboutus">About</a></mat-list-item>
-          <mat-list-item><a mat-button routerLink="/menu">Menu</a></mat-list-item>
-          <mat-list-item><a mat-button routerLink="/contactus">Contact</a></mat-list-item>
+          <mat-list-item><a mat-button routerLink="/aboutus">Sobre</a></mat-list-item>
+          <mat-list-item><a mat-button routerLink="/menu">Fotos</a></mat-list-item>
+          <mat-list-item><a mat-button routerLink="/contactus">Contato</a></mat-list-item>
         </mat-list>
       </div>
       <div fxFlex="55">
-        <h4>Our Address</h4>
+        <h4>Endereço</h4>
         <address style="text-size: 80%">
-          121, Clear Water Bay Road<br> Clear Water Bay, Kowloon<br> HONG KONG<br>
-          <i class="fa fa-phone"></i>: +852 1234 5678<br>
-          <i class="fa fa-fax"></i>: +852 8765 4321<br>
+          21, Travessa Madre Jacinta<br> Gávea, Rio de Janeiro<br> Brasil<br>
+          <i class="fa fa-phone"></i>: +21 99999-9623<br>
+          <i class="fa fa-fax"></i>: +21 98790-1506<br>
           <i class="fa fa-envelope"></i>:
-          <a href="mailto:confusion@food.net">confusion@food.net</a>
+          <a href="mailto:confusion@food.net">violante@brabo.com</a>
         </address>
       </div>
     </div>
@@ -38,6 +38,6 @@
     </div>
   </div>
   <div>
-      <p>© Copyright 2018 Ristorante Con Fusion</p>
+      <p>© Copyright 2018 Pedro Violante Admiradores</p>
   </div>
 </div>
