--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
     </mat-card-content>
   </mat-card>
   <div [hidden]="dish || dishErrMess">
-    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    <mat-spinner></mat-spinner><h4>Carregando . . .</h4>
   </div>
   <div fxFlex *ngIf="dishErrMess">
     <h2>Error</h2>
@@ -40,7 +40,7 @@
     </mat-card-content>
   </mat-card>
   <div [hidden]="promotion || promotionErrMess">
-    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    <mat-spinner></mat-spinner><h4>Carregando . . .</h4>
   </div>
   <div fxFlex *ngIf="promotionErrMess">
     <h2>Error</h2>
@@ -61,7 +61,7 @@
     </mat-card-content>
   </mat-card>
   <div [hidden]="leader || leaderErrMess">
-    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    <mat-spinner></mat-spinner><h4>Carregando . . .</h4>
   </div>
   <div fxFlex *ngIf="leaderErrMess">
     <h2>Error</h2>
