--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -64,7 +64,7 @@
     <h2>Administradores</h2>
     <mat-list *ngIf="leaders">
       <mat-list-item *ngFor="let leader of leaders">
-        <img matListAvatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>
+        <img matListAvatar src={{leader.image}} alt={{leader.name}}>
         <h1 matLine> {{leader.name}} </h1>
         <p matLine>
           <span> {{leader.description}} </span>
